--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -1,32 +1,39 @@
-
+<!--index.wxml-->
 <view class="container">
-  <view class="remind-box" wx:if="{{remind}}">
-    <image class="remind-img" src="{{loading}}"></image>
-  </view>
-  <block wx:else>
-    <text class="title">Marry</text>
-    <view class="content">
-      <view class="hd" style="transform:rotateZ({{angle}}deg);">
-        <image class="logo" src="http://pdqyvtjnk.bkt.clouddn.com/logo.jpg"></image>
-        <image class="wave" src="{{wave}}" mode="aspectFill"></image>
-        <image class="wave wave-bg" src="{{wave}}" mode="aspectFill"></image>
-      </view>
-      <view class='datetime' animation="{{animationData}}">
-        <view class='box'>
-            <view class="name css13610f7ae66601">
-                <span class="fl">李明</span>
-                <span class="and">&</span>
-                <span class="fr ">温瑞</span>
-            </view>
-            <view class="date css13610f7ae66601">
-                <view>谨定于 2018年10月1日</view>
-                <view>农历 2018年八月二十二 举办婚礼</view>
-                <view>恭请您的光临</view>
-            </view>
+    <!-- 用户登录测试 -->
+    <view class="userinfo">
+        <image
+            class="userinfo-avatar"
+            src="{{logged ? userInfo.avatarUrl : './user-unlogin.png'}}"
+            background-size="cover"
+        ></image>
+        <view>
+            <button class="userinfo-nickname" wx:if="{{!logged}}" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo">点击测试登录接口</button>
+            <text class="userinfo-nickname" wx:else>{{userInfo.nickName}}</text>
         </view>
     </view>
-      <button class="confirm-btn" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" > 进入婚礼 </button>
-      <!-- <button class="confirm-btn" open-type='getUserInfo' bindgetuserinfo='getUserInfo' bindtap="btnEnter">进入婚礼</button> -->
+
+
+    <!-- 上传图片测试 -->
+    <view class="uploader">
+        <view class="uploader-text" bindtap="doUpload">
+            <text>上传图片</text>
+        </view>
+        <view class="uploader-container" wx:if="{{imgUrl}}">
+            <image
+                class="uploader-image"
+                src="{{imgUrl}}"
+                mode="aspectFit"
+                bindtap="previewImg"
+            ></image>
+        </view>
     </view>
-  </block>
+
+
+    <!-- 上传图片测试 -->
+    <view class="uploader">
+        <navigator url="../addCgi/addCgi" open-type="navigate" class="uploader-text">
+            <text>快速增加 CGI</text>
+        </navigator>
+    </view>
 </view>
